--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: linear-gradient(to bottom, #ebf3ff, #f0f9ff, #f0f5ff);
+}
+
